line-height attr added on slider caption

--- a/Hakahaki/index.html
+++ b/Hakahaki/index.html
@@ -248,7 +248,7 @@ $(".pdf").click(function(){
     <div u="slides" style="cursor: move; position: absolute; overflow: hidden; left: 20px; top: 20px; width: 660px ; height: 262px;">
       <div>
         <img u="image" src="images/slider/004.jpg" />
-        <div u="caption" t="NO" style="position: absolute; top: 200px; left: 0px; width: 660px;height: 70px; color:#FFFFFF; background:#000000; opacity:0.4; text-align:center" >
+        <div u="caption" t="NO" style="position: absolute; top: 200px; left: 0px; width: 660px; height: 70px; color:#FFFFFF; background:#000000; opacity:0.4; text-align:center; line-height:70px" >
           <strong>This is a test Caption two</strong>
         </div>
         <div u="thumb">
@@ -259,7 +259,7 @@ $(".pdf").click(function(){
       
       <div>
         <img u="image" src="images/slider/003.jpg" />
-        <div u="caption" t="NO" style="position: absolute; top: 200px; left: 0px; width: 660px;height: 70px; color:#FFFFFF; background:#000000; opacity:0.4; text-align:center">
+        <div u="caption" t="NO" style="position: absolute; top: 200px; left: 0px; width: 660px; height: 70px; color:#FFFFFF; background:#000000; opacity:0.4; text-align:center; line-height:70px" >
           <strong>This is a test Caption three</strong>
         </div>
         <div u="thumb">
@@ -269,7 +269,7 @@ $(".pdf").click(function(){
       </div>
       <div>
         <img u="image" src="images/slider/001.jpg" />
-        <div u="caption" t="NO" style="position: absolute; top: 200px; left: 0px; width: 660px;height: 70px; color:#FFFFFF; background:#000000; opacity:0.4; text-align:center" >
+        <div u="caption" t="NO" style="position: absolute; top: 200px; left: 0px; width: 660px; height: 70px; color:#FFFFFF; background:#000000; opacity:0.4; text-align:center; line-height:70px" >
           <strong>This is a test Caption four</strong>
         </div>
         <div u="thumb">
@@ -279,7 +279,7 @@ $(".pdf").click(function(){
       </div>
       <div>
         <img u="image" src="images/slider/002.jpg" />
-        <div u="caption" t="NO" style="position: absolute; top: 200px; left: 0px; width: 660px;height: 70px; color:#FFFFFF; background:#000000; opacity:0.4; text-align:center">
+        <div u="caption" t="NO" style="position: absolute; top: 200px; left: 0px; width: 660px; height: 70px; color:#FFFFFF; background:#000000; opacity:0.4; text-align:center; line-height:70px" >
           <strong>This is a test Caption</strong> 
         </div>
         <div u="thumb">
